# flask-cognito-jwt-example

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.aws  Makefile  README.md  pyproject.toml  run.bjoern.py
.github/workflows/: pipeline.yml
deploy/: app.py  cognito_stack.py  config.py  lambda_api_stack.py
deploy/stacks/: api_stack.py  cognito_client_stack.py  cognito_stack.py  config.py  lambda_api_stack.py  lambda_env_stack.py  lambda_stack.py
infra/: app.py
src/webapp/: __init__.py  config.py  lambda.py  main.py  routes.py  run.debug.py
src/webapp/auth/: routes.py  utils.py
src/webapp/home/: routes.py
src/webapp/home/templates/: index.html
src/webapp/private/: routes.py
src/webapp/private/templates/: secret.html
src/webapp/templates/: index.html  secret.html
tests/: conftest.py  test-lambda-local  test_webapp.py
