[tool.poetry]
name = "webapp"
version = "0.1.0"
description = "A simple Flask app protected by AWS Cognito"
authors = ["mblackgeo <18327836+mblackgeo@users.noreply.github.com>"]
license = "MIT"
packages = [
    { include = "webapp", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"
Flask-JWT-Extended = "^4.3.1"
Flask-AWSCognito = "^1.3"
python-dotenv = "^0.19.2"
bjoern = "^3.2.1"
PyJWT = "^2.3.0"
cryptography = "^36.0.1"
Flask-Cors = "^3.0.10"
flask-lambda = "^0.0.4"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.0.1"
flake8 = "^4.0.1"
isort = "^5.10.1"
pre-commit = "^2.17.0"
mypy = "^0.931"
typed-ast = "^1.5.2"
pylint = "^2.12.2"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
aws-cdk-lib = "2.13.0"
constructs = ">=10.0.0"
pydantic = "^1.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["webapp", "stacks"]